--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -294,7 +294,7 @@ html.route-index #carbon
     border-top: none
     margin-top: -1.5rem
     pre
-      max-height: 600px
+      max-height: 50vh
     &:not(:last-child)
       margin-bottom: 1.5rem
 
