--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6662,7 +6662,7 @@ html.route-index #carbon {
 }
 
 .example + .highlight pre {
-  max-height: 600px;
+  max-height: 50vh;
 }
 
 .example + .highlight:not(:last-child) {
