--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -251,13 +251,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-block-desktop-only {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-block-widescreen {
     display: block !important;
   }
@@ -297,13 +297,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-flex-desktop-only {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-flex-widescreen {
     display: flex !important;
   }
@@ -343,13 +343,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-inline-desktop-only {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-inline-widescreen {
     display: inline !important;
   }
@@ -389,13 +389,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-inline-block-desktop-only {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-inline-block-widescreen {
     display: inline-block !important;
   }
@@ -435,13 +435,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-inline-flex-desktop-only {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-inline-flex-widescreen {
     display: inline-flex !important;
   }
@@ -519,13 +519,13 @@ table th {
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1239px) {
+@media screen and (min-width: 1000px) and (max-width: 1191px) {
   .is-hidden-desktop-only {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .is-hidden-widescreen {
     display: none !important;
   }
@@ -2700,7 +2700,7 @@ a.box:active {
 
 .title .tag,
 .subtitle .tag {
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 
 .title {
@@ -2799,14 +2799,14 @@ a.box:active {
     max-width: 960px;
   }
   .container.is-fluid {
-    margin: 0 1.5rem;
+    margin: 0 20px;
     max-width: none;
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .container {
-    max-width: 1200px;
+    max-width: 1152px;
   }
 }
 
@@ -4815,7 +4815,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .column.is-narrow-widescreen {
     flex: none;
   }
@@ -5175,7 +5175,7 @@ label.panel-block:hover {
   padding: 3rem 1.5rem;
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 1192px) {
   .hero-body {
     padding-left: 0;
     padding-right: 0;
