--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -5,13 +5,13 @@
   position: relative
   +desktop
     margin: 0 auto
-    max-width: $desktop - 40px
+    max-width: $desktop - 40px // 960px
     // Modifiers
     &.is-fluid
-      margin: 0 1.5rem
+      margin: 0 20px
       max-width: none
   +widescreen
-    max-width: $widescreen - 40px
+    max-width: $widescreen - 40px // 1152px
 
 .delete
   +delete
