--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -18,7 +18,7 @@ $subtitle-weight:   $weight-light !default
   strong
     font-weight: $title-weight-bold
   .tag
-    vertical-align: bottom
+    vertical-align: middle
 
 .title
   color: $title
