--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -185,8 +185,10 @@
 // Responsiveness
 
 $tablet: 769px !default
-$desktop: 1000px !default
-$widescreen: 1240px !default
+$desktop: 1000px !default // 960px container + 40px
+$widescreen: 1192px !default // 1152px container + 40
+// 960 and 1152 have been chosen because
+// they are divisible by both 12 and 16
 
 =from($device)
   @media screen and (min-width: $device)
