--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -14,7 +14,9 @@
               <div class="control is-grouped">
                 <div class="control has-icon is-expanded">
                   <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required>
-                  <i class="fa fa-envelope"></i>
+                  <span class="icon is-small">
+                    <i class="fa fa-envelope"></i>
+                  </span>
                 </div>
                 <div class="control">
                   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button is-white is-outlined">
