--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -187,10 +187,15 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
   animation-delay: 1.2s
 
 #npm
+  align-items: center
   animation: fadeIn 500ms both
   animation-delay: 1.4s
+  background: none
+  display: flex
+  justify-content: center
   margin: -10px 0 20px
   code
+    background: $background
     border-radius: $radius
     color: $primary
     display: inline-block
