--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6525,12 +6525,17 @@ svg {
 }
 
 #npm {
+  align-items: center;
   animation: fadeIn 500ms both;
   animation-delay: 1.4s;
+  background: none;
+  display: flex;
+  justify-content: center;
   margin: -10px 0 20px;
 }
 
 #npm code {
+  background: whitesmoke;
   border-radius: 3px;
   color: #00d1b2;
   display: inline-block;
