Fix index icons

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -76,7 +76,7 @@
 
     .title.is-2 a {
       color: #242424;
-      padding-left: 60px;
+      padding-left: 48px;
       position: relative;
     }
 
@@ -84,10 +84,10 @@
       color: #00d1b2;
     }
 
-    .title.is-2 .icon.is-large {
-      left: 0;
+    .title.is-2 .icon.is-medium {
+      left: 8px;
       position: absolute;
-      top: -1px;
+      top: 10px;
     }
 
     .hero .title.is-2 a {
