--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -18,14 +18,14 @@ doc-subtab: card
         <div class="card">
           <div class="card-image">
             <figure class="image is-4by3">
-              <img src="http://placehold.it/300x225" alt="">
+              <img src="http://unsplash.it/300/225" alt="">
             </figure>
           </div>
           <div class="card-content">
             <div class="media">
               <div class="media-left">
                 <figure class="image is-32x32">
-                  <img src="http://placehold.it/64x64" alt="Image">
+                  <img src="http://unsplash.it/64" alt="Image">
                 </figure>
               </div>
               <div class="media-content">
@@ -47,14 +47,14 @@ doc-subtab: card
 <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
-      <img src="http://placehold.it/300x225" alt="">
+      <img src="http://unsplash.it/300/225" alt="">
     </figure>
   </div>
   <div class="card-content">
     <div class="media">
       <div class="media-left">
         <figure class="image is-32x32">
-          <img src="http://placehold.it/64x64" alt="Image">
+          <img src="http://unsplash.it/64" alt="Image">
         </figure>
       </div>
       <div class="media-content">
