--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -75,7 +75,7 @@ doc-subtab: modal
   <div class="modal-background"></div>
   <div class="modal-content">
     <p class="image is-4by3">
-      <img src="http://placehold.it/1280x960">
+      <img src="https://unsplash.it/1280/960">
     </p>
   </div>
   <button class="modal-close"></button>
@@ -122,7 +122,7 @@ doc-subtab: modal
       <article class="media">
         <div class="media-left">
           <figure class="image is-64x64">
-            <img src="http://placehold.it/128x128" alt="Image">
+            <img src"=https://unsplash.it/128" alt="Image">
           </figure>
         </div>
         <div class="media-content">
@@ -157,7 +157,7 @@ doc-subtab: modal
   <div class="modal-background"></div>
   <div class="modal-content">
     <p class="image is-4by3">
-      <img src="http://placehold.it/1280x960">
+      <img src="https://unsplash.it/1280/960">
     </p>
   </div>
   <button class="modal-close"></button>
