--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6312,7 +6312,12 @@ svg {
 #carbon {
   max-width: 340px;
   min-height: 130px;
-  padding: 15px;
+  padding: 0;
+  position: relative;
+}
+
+#carbon:hover {
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #00d1b2;
 }
 
 @media screen and (min-width: 769px) {
@@ -6327,33 +6332,44 @@ svg {
   text-align: left;
 }
 
-#carbonads a:hover {
-  text-decoration: underline;
-}
-
+#carbonads a,
 #carbonads span {
   display: block;
 }
 
+#carbonads .carbon-wrap {
+  position: relative;
+}
+
 #carbonads .carbon-img {
   float: left;
-  height: 100px;
-  width: 130px;
+  height: 130px;
+  padding: 15px 0 15px 15px;
+  width: 145px;
 }
 
 #carbonads .carbon-img img {
   display: block;
+  height: 100px;
+  width: 130px;
 }
 
 #carbonads .carbon-text {
   display: block;
   color: #363636;
-  margin-left: 145px;
+  line-height: 20px;
+  padding: 15px 15px 35px 160px;
 }
 
 #carbonads .carbon-poweredby {
+  bottom: 0;
+  color: #7a7a7a;
   font-size: 0.75rem;
-  margin-left: 15px;
+  left: 160px;
+  line-height: 20px;
+  padding: 0 15px 10px 0;
+  position: absolute;
+  right: 0;
 }
 
 #github {
