--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -33,7 +33,10 @@ $carbon-space: 15px
 #carbon
   max-width: 340px
   min-height: 100px + ($carbon-space * 2)
-  padding: $carbon-space
+  padding: 0
+  position: relative
+  &:hover
+    box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $primary
   +tablet
     margin-left: auto
     margin-right: auto
@@ -41,23 +44,34 @@ $carbon-space: 15px
 
 #carbonads
   text-align: left
-  a:hover
-    text-decoration: underline
+  a,
   span
     display: block
+  .carbon-wrap
+    position: relative
   .carbon-img
     float: left
-    height: 100px
-    width: 130px
+    height: 130px
+    padding: 15px 0 15px 15px
+    width: 145px
     img
       display: block
+      height: 100px
+      width: 130px
   .carbon-text
     display: block
     color: $text-strong
-    margin-left: 130px + $carbon-space
+    line-height: 20px
+    padding: 15px 15px 35px 160px
   .carbon-poweredby
+    bottom: 0
+    color: $text-light
     font-size: $size-small
-    margin-left: $carbon-space
+    left: 160px
+    line-height: 20px
+    padding: 0 15px 10px 0
+    position: absolute
+    right: 0
 
 $github: #333333
 $twitter: #55acee
