Allow overriding text-rendering

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,5 +1,6 @@
 $body-background: $white !default
 $body-size: $size-6 !default
+$body-text-rendering: optimizeLegibility !default
 
 html
   background-color: $body-background
@@ -9,7 +10,7 @@ html
   min-width: 300px
   overflow-x: hidden
   overflow-y: scroll
-  text-rendering: optimizeLegibility
+  text-rendering: $body-text-rendering
 
 article,
 aside,
