icon color modifiers

--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,4 +1,8 @@
 .icon
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+      &.is-#{$name}
+        color: $color
   +fa(21px, 1.5rem)
   .fa
     font-size: inherit
