--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -53,6 +53,8 @@
     flex-grow: 1
     flex-shrink: 1
     width: 100%
+  &.has-wrap
+    flex-wrap: wrap;
   &.is-active
     border-left-color: $link
     color: $link-active
