Add prefix variable for all classes
This could prevent class name conflicts.

--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -19,12 +19,12 @@ $control-radius-small: $radius-small !default
   vertical-align: top
   // States
   &:focus,
-  &.is-focused,
+  &.#{$prefix}is-focused,
   &:active,
-  &.is-active
+  &.#{$prefix}is-active
     outline: none
   &[disabled],
-  &.is-disabled
+  &.#{$prefix}is-disabled
     pointer-events: none
 
 // The controls sizes use mixins so they can be used at different breakpoints
