--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -1,5 +1,9 @@
 ////////////////////////////////////////////////
 ////////////////////////////////////////////////
+
+// 0. Prefix for all class names
+$prefix: ''
+
 // 1. Initial variables
 
 // Colors
