--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -173,8 +173,8 @@
 // Responsiveness
 
 $tablet: 769px !default
-$desktop: 1000px !default // 960px container + 40px
-$widescreen: 1192px !default // 1152px container + 40
+$desktop: 1000px !default
+$widescreen: 1192px !default
 // 960 and 1152 have been chosen because
 // they are divisible by both 12 and 16
 
