Updated SASS files, merged in screen CSS

--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -58,12 +58,14 @@ html
     box-sizing: inherit
 
 // Media
-img,
+img
+  height: auto
+  max-width: 100%
+iframe,
 embed,
 object,
 audio,
 video
-  height: auto
   max-width: 100%
 
 // Iframe
