--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -123,7 +123,7 @@ $input-radius:              $radius !default
     padding-right: 2.5em
     &:hover
       border-color: $input-hover-border
-    &::ms-expand
+    &::-ms-expand
       display: none
   // States
   &:hover
@@ -177,6 +177,8 @@ $input-radius:              $radius !default
   &:not(:last-child)
     margin-bottom: 0.75rem
   // Modifiers
+  &.has-text-right
+    text-align: right
   &.has-addons
     display: flex
     justify-content: flex-start
@@ -218,6 +220,8 @@ $input-radius:              $radius !default
       .select
         flex-grow: 1
         flex-shrink: 0
+    &.is-inline-flex
+      display: inline-flex
   &.has-icon
     .icon
       color: $input-icon
