--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,12 +1,38 @@
 .icon
   +fa(21px, 1.5rem)
+  svg
+    fill: currentColor
+    height: 21px
+    max-width: 21px
   .fa
     font-size: inherit
     line-height: inherit
+  &.is-centered
+    display: block
+    position: absolute
+    text-align: center
+    top: 50%
+    transform: translate(0, -50%)
+    width: 100%
+    z-index: 1
   // Sizes
   &.is-small
     +fa(14px, 1rem)
+    svg
+      height: 14px
+      max-width: 14px
   &.is-medium
     +fa(28px, 2rem)
+    svg
+      height: 28px
+      max-width: 28px
   &.is-large
     +fa(42px, 3rem)
+    svg
+      height: 42px
+      max-width: 42px
+  &.is-huge
+    +fa(56px, 4rem)
+    svg
+      height: 56px
+      max-width: 56px
