--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -7,6 +7,13 @@ $dimensions: 16 24 32 48 64 96 128
     display: block
     height: auto
     width: 100%
+  &.is-fullwidth
+    display: block
+    width: 100%    
+  &.has-text-centered
+    img
+      margin: 0 auto
+      width: auto
   // Ratio
   &.is-square,
   &.is-1by1,
