--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -24,3 +24,12 @@
     &.is-#{$name}
       background-color: $color
       color: $color-invert
+  &.has-icon
+    padding-left: 90px
+    position: relative
+    .icon
+      left: 0
+      position: absolute
+      top: 50%
+      transform: translate(0, -50%)
+      width: 90px
