--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -12,9 +12,13 @@
   padding-right: 0.875em
   vertical-align: top
   white-space: nowrap
-  .delete
+  .delete,
+  .plus
     margin-left: 0.25em
     margin-right: -0.5em
+  .checkmark
+    margin-left: 0.25em
+    margin-right: 0
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
