--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,3 +1,17 @@
 .footer
   background-color: $background
-  padding: 3rem 1.5rem 6rem
+  padding: 0
+  a
+    color: inherit
+    &:hover, &:visited:hover
+      color: $white
+  .title
+    color: $white
+  .footer-head
+    background: $grey-dark
+    border-top: 6px solid $primary
+    box-shadow: 0 4px 30px rgba($black, 0.3)
+    padding: 1.5rem
+  .footer-foot
+    background: $grey-darker
+    padding: 1.5rem
