--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -5,7 +5,7 @@
   position: relative
   +desktop
     margin: 0 auto
-    max-width: $desktop - 40px // 960px
+    max-width: $desktop - 30px // 970px
     // Modifiers
     &.is-fluid
       margin: 0 20px
@@ -13,8 +13,22 @@
   +widescreen
     max-width: $widescreen - 40px // 1152px
 
+.containernooverflow
+  max-width: 100%
+  overflow: hidden
+  position: relative
+
+.containerwidget
+  padding: 20px 20px 0
+
 .delete
   +delete
+
+.plus
+  +plus
+
+.checkmark
+  +checkmark
 
 .fa
   font-size: 21px
@@ -27,16 +41,6 @@
   letter-spacing: 1px
   margin-bottom: 5px
   text-transform: uppercase
-
-.highlight
-  +block
-  font-weight: $weight-normal
-  max-width: 100%
-  overflow: hidden
-  padding: 0
-  pre
-    overflow: auto
-    max-width: 100%
 
 .loader
   +loader
