--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -26,6 +26,8 @@ $table-row-even-hover-background: $white-ter !default
   th
     color: $text-strong
     text-align: left
+    &.has-text-right
+      text-align: right
   tr
     &:hover
       background-color: $table-row-hover-background
