--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -80,6 +80,114 @@
     height: $dimension-large
     width: $dimension-large
 
+=plus
+  // We need even pixel dimensions to ensure the delete cross can be perfectly centered
+  $dimension-small: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-small)) * 1px
+  $dimension-normal: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-normal)) * 1px
+  $dimension-medium: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-medium)) * 1px
+  $dimension-large: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-large)) * 1px
+  +unselectable
+  -moz-appearance: none
+  -webkit-appearance: none
+  background-color: rgba($black, 0.2)
+  border: none
+  border-radius: 290486px
+  cursor: pointer
+  display: inline-block
+  font-size: $size-normal
+  height: $dimension-normal
+  outline: none
+  position: relative
+  transform-origin: center center
+  vertical-align: top
+  width: $dimension-normal
+  &:before,
+  &:after
+    background-color: $white
+    content: ""
+    display: block
+    height: 2px
+    left: 45%
+    margin-left: -25%
+    margin-top: -1px
+    position: absolute
+    top: 50%
+    width: 50%
+  &:after
+    transform: rotate(-90deg)
+  &:hover,
+  &:focus
+    background-color: rgba($black, 0.3)
+  &:active
+    background-color: rgba($black, 0.4)
+  // Sizes
+  &.is-small
+    height: $dimension-small
+    width: $dimension-small
+  &.is-medium
+    height: $dimension-medium
+    width: $dimension-medium
+  &.is-large
+    height: $dimension-large
+    width: $dimension-large
+
+=checkmark
+  // We need even pixel dimensions to ensure the delete cross can be perfectly centered
+  $dimension-small: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-small)) * 1px
+  $dimension-normal: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-normal)) * 1px
+  $dimension-medium: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-medium)) * 1px
+  $dimension-large: roundToEvenNumber(1.5 * removeUnit($size-6) * removeUnit($size-large)) * 1px
+  +unselectable
+  -moz-appearance: none
+  -webkit-appearance: none
+  background-color: rgba($black, 0.2)
+  border: none
+  border-radius: 290486px
+  cursor: pointer
+  display: inline-block
+  font-size: $size-normal
+  height: $dimension-normal
+  outline: none
+  position: relative
+  transform-origin: center center
+  vertical-align: top
+  width: $dimension-normal
+  &:before,
+  &:after
+    background-color: $white
+    content: ""
+    display: block
+    height: 2px
+    left: 50%
+    margin-left: -25%
+    margin-top: -1px
+    position: absolute
+    top: 50%
+    width: 50%
+  &:before
+    left: 45%
+    top: 60%
+    transform: rotate(45deg)
+    width: 25%
+  &:after
+    left: 55%
+    transform: rotate(-45deg)
+  &:hover,
+  &:focus
+    background-color: rgba($black, 0.3)
+  &:active
+    background-color: rgba($black, 0.4)
+  // Sizes
+  &.is-small
+    height: $dimension-small
+    width: $dimension-small
+  &.is-medium
+    height: $dimension-medium
+    width: $dimension-medium
+  &.is-large
+    height: $dimension-large
+    width: $dimension-large
+
 =fa($size, $dimensions)
   display: inline-block
   font-size: $size
