fix select element with is-expanded class to fill the full width of its parent span

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -200,6 +200,8 @@ $input-radius:              $radius !default
         select
           border-radius: 0 $input-radius $input-radius 0
       &.is-expanded
+        select
+          width: 100%
         flex-grow: 1
         flex-shrink: 0
     .select select
