1. re-ordered change to match styleguide 2. built css and docs

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2164,6 +2164,12 @@ a.box:active {
       flex-shrink: 0;
 }
 
+.control.has-addons .button.is-expanded select,
+.control.has-addons .input.is-expanded select,
+.control.has-addons .select.is-expanded select {
+  width: 100%;
+}
+
 .control.has-addons .select select:hover {
   z-index: 2;
 }
@@ -3222,7 +3228,6 @@ a.box:active {
 .level-left {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -3246,7 +3251,6 @@ a.box:active {
 .level-right {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -3264,7 +3268,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3817,7 +3820,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -4030,7 +4032,6 @@ a.nav-item.is-tab.is-active {
 .nav-right {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   -ms-flex-preferred-size: 0;
       flex-basis: 0;
@@ -5617,7 +5618,6 @@ label.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5640,7 +5640,6 @@ label.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: 0;
