Updated Bulma to best support ModDB v5

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -64,6 +64,10 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 .is-hidden
   display: none !important
 
+.is-hidden-tiny
+  +tiny
+    display: none !important
+
 .is-hidden-mobile
   +mobile
     display: none !important
@@ -88,9 +92,20 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   +desktop-only
     display: none !important
 
+.is-hidden-desktop-all
+  +desktop-all
+    display: none !important
+
 .is-hidden-widescreen
   +widescreen
     display: none !important
+
+.is-shown-tiny
+  display: none !important
+
+.is-shown-tiny
+  +tiny
+    display: inherit !important
 
 // Other
 
