--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -4,16 +4,8 @@
 
 .modal-content,
 .modal-card
-  margin: 0 20px
-  max-height: calc(100vh - 160px)
-  overflow: auto
   position: relative
   width: 100%
-  // Responsiveness
-  +tablet
-    margin: 0 auto
-    max-height: calc(100vh - 40px)
-    width: 640px
 
 .modal-close
   +delete
@@ -79,3 +71,23 @@
   // Modifiers
   &.is-active
     display: flex
+
+.modal-iframe,
+.modal-div
+  max-height: calc(100vh - 40px)
+  max-width: calc(100vw - 40px)
+  overflow: auto
+
+.modal-image
+  cursor: zoom-out
+  display: block
+  max-height: calc(100vh)
+
+.previewform
+  background: $white
+  padding: 20px
+  max-width: $tablet
+
+.previewsimple
+  background: none
+  padding: 0
