--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -1,36 +1,3 @@
-// Components
-
-.hero-video
-  +overlay
-  overflow: hidden
-  video
-    left: 50%
-    min-height: 100%
-    min-width: 100%
-    position: absolute
-    top: 50%
-    transform: translate3d(-50%, -50%, 0)
-  // Modifiers
-  &.is-transparent
-    opacity: 0.3
-  // Responsiveness
-  +mobile
-    display: none
-
-.hero-buttons
-  margin-top: 1.5rem
-  // Responsiveness
-  +mobile
-    .button
-      display: flex
-      &:not(:last-child)
-        margin-bottom: 0.75rem
-  +tablet
-    display: flex
-    justify-content: center
-    .button:not(:last-child)
-      margin-right: 1.5rem
-
 // Containers
 
 .hero-head,
@@ -41,7 +8,7 @@
 .hero-body
   flex-grow: 1
   flex-shrink: 0
-  padding: 3rem 1.5rem
+  padding: 1.5rem
   // Responsiveness
   +from($widescreen)
     padding-left: 0
@@ -62,12 +29,14 @@
     ul
       border-bottom: none
   // Colors
-  @each $name, $pair in $colors
+  @each $name, $pair in $colorshero
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
     &.is-#{$name}
       background-color: $color
+      box-shadow: 0 4px 30px rgba($black, 0.3)
       color: $color-invert
+      position: relative
       .title
         color: $color-invert
       .subtitle
@@ -144,3 +113,185 @@
       & > .container
         flex-grow: 1
         flex-shrink: 1
+
+.hero
+  &.is-primary
+    .hero-head
+      box-shadow: 0 4px 7px rgba($black, 0.1)
+    .hero-foot
+      background: rgba($black, 0.3)
+    .nav
+      box-shadow: none
+    .nav-right
+      flex: inherit
+    a.nav-item
+      font-weight: $weight-bold
+    .nav-logo
+      img
+        height: 50px
+        max-height: 50px
+    .nav-search
+      position: relative
+      width: 100%
+      .input
+        min-width: 265px
+    .nav-signin,
+    .nav-social
+      display: none
+    .nav-signin
+      .input
+        max-width: 130px
+    .nav-menu
+      &.is-active
+        .input
+          max-width: none
+          width: 100%
+    .nav-menu-signin
+      .nav-social,
+      .nav-signin
+        display: flex
+      .nav-search
+        display: none
+    .control,
+    form
+      width: 100%
+    .tabs
+      &.is-boxed
+        overflow: inherit
+        li
+          position: relative
+          a
+            border: none
+            border-radius: 0
+            cursor: pointer
+            margin: 0
+            opacity: 1
+            padding-left: 0
+            padding-right: 0
+            text-align: center
+          &:hover
+            a
+              background: $white
+              color: $primary
+          a:hover,
+          &.is-active a
+            background: $primary
+            color: $white
+          .box
+            border-radius: 0 0 $radius $radius
+            display: none
+            position: absolute
+            width: 100%
+            z-index: 10000
+          &:hover
+            .box
+              display: block
+              a
+                background: inherit
+                color: $grey-dark
+                &:hover
+                  background: $primary
+                  color: $white
+                &:last-child
+                  border-radius: 0 0 $radius $radius
+    .search-suggest
+      .box
+        a
+          color: $grey-dark
+          &.suggest-over
+            color: $white
+            cursor: pointer
+  &.is-dark
+    .title,
+    .subtitle,
+    .tabs li a
+      text-shadow: 1px 1px 0 rgba($black, 0.3)
+    .title,
+    .subtitle
+      a
+        color: inherit
+    .columnsnomargin
+      margin-bottom: 0
+    .hero-foot
+      border-bottom: 6px solid $primary
+    .tag
+      text-shadow: none
+    .tabs
+      overflow: visible
+      li
+        &.is-inactive
+          opacity: 0.5
+      &.is-boxed
+        li
+          &.is-active a,
+          a:hover
+            background: $primary
+            border-color: $primary
+            color: $white
+            text-shadow: none
+      a
+        .count
+          margin-left: 4px
+          opacity: 0.5
+      .more
+        display: none
+        position: relative
+      li
+        .box
+          border-radius: 0 0 $radius $radius
+          display: none
+          position: absolute
+          right: 0
+          width: 100%
+          z-index: 10000
+          li
+            &.is-active
+              background: $primary
+              a
+                background: inherit
+                border-color: transparent
+            &:first-child
+              border-radius: 0
+        &:hover
+          .box
+            background: $dark
+            display: block
+            a
+              background: inherit
+              border-color: transparent
+              border-radius: 0
+              cursor: pointer
+
++mobile
+  .hero
+    &.is-primary
+      .nav-logo
+        img
+          max-height: 34px
+
++tablet
+  .hero
+    &.is-primary
+      .nav-searchlogin
+        padding-right: 0
+    &.is-dark
+      .controlactions
+        margin-top: 12px
+
++touch
+  .hero
+    &.is-primary
+      .nav-search
+        .input
+          min-width: 140px
+    &.is-dark
+      .tabs
+        a
+          .count
+            display: none
+
++desktop
+  .hero
+    &.is-primary
+      .nav-logo
+        padding-left: 0
