--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -81,6 +81,9 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     &:not(:first-child)
       margin-left: 0.375rem
 
+.paginationalt
+  margin-top: 0.75rem
+
 +mobile
   .pagination
     flex-wrap: wrap
