--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -91,6 +91,10 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
   text-align: center
   white-space: nowrap
   +button-icon($size-normal)
+  &.truncate
+    flex: 1
+  &.has-text-left
+    justify-content: flex-start
   // States
   &:hover,
   &.is-hovered
@@ -120,6 +124,8 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     &.is-active
       background-color: $background
       color: $text-strong
+  &.is-nolink
+    text-decoration: none
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
@@ -189,3 +195,5 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
       +loader
       +center(16px)
       position: absolute !important
+  &.is-circle
+    border-radius: 1024px
