--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -1,4 +1,4 @@
-$dimensions: 16 24 32 48 64 96 128
+$dimensions: 16 24 32 48 50 64 96 128
 
 .image
   display: block
@@ -7,6 +7,30 @@ $dimensions: 16 24 32 48 64 96 128
     display: block
     height: auto
     width: 100%
+  iframe
+    bottom: 0
+    height: 100%
+    left: 0
+    position: absolute
+    right: 0
+    top: 0
+    width: 100%
+  .image-overlay
+    background: linear-gradient(to bottom, rgba($black, 0) 0%, rgba(34, 35, 36, 1) 100%)
+    bottom: 0
+    color: $white
+    font-size: 0.8em
+    left: 0
+    padding: 10px 5px 5px
+    position: absolute
+    width: 100%
+    z-index: 1
+    .text
+      opacity: 0.7
+  &:hover
+    .image-overlay
+      .text
+        opacity: 1
   &.is-fullwidth
     display: block
     width: 100%    
