--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -4,6 +4,11 @@
   border-radius: $radius
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
   position: relative
+  a
+    color: inherit
+    text-decoration: underline
+    &:hover
+      text-decoration: none
   code,
   pre
     background: $white
@@ -17,6 +22,8 @@
   .subtitle,
   .content
     color: inherit
+  .control-label
+    text-align: left
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
