--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -13,6 +13,10 @@ $table-row-even-hover-background: $white-ter !default
   color: $table
   margin-bottom: 1.5rem
   width: 100%
+  td
+    &.has-text-right
+      .control
+        float: right
   td,
   th
     border: 1px solid $table-border
@@ -31,6 +35,12 @@ $table-row-even-hover-background: $white-ter !default
   tr
     &:hover
       background-color: $table-row-hover-background
+    &.rowcontentbefore
+      td
+        border: none
+    &.rowcontentnext
+      td
+        opacity: 0.5
   thead
     td,
     th
