--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,5 +1,6 @@
 .footer
-  background-color: $background
+  background: $dark
+  border-top: 6px solid $primary
   padding: 0
   a
     color: inherit
@@ -7,11 +8,6 @@
       color: $white
   .title
     color: $white
-  .footer-head
-    background: $grey-dark
-    border-top: 6px solid $primary
-    box-shadow: 0 4px 30px rgba($black, 0.3)
-    padding: 1.5rem
+  .footer-head,
   .footer-foot
-    background: $grey-darker
     padding: 1.5rem
