--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -29,6 +29,7 @@ $red:          hsl(348, 100%, 61%) !default
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
 
+$size-0: 5rem !default
 $size-1: 3.5rem !default
 $size-2: 2.75rem !default
 $size-3: 2rem !default
@@ -131,5 +132,6 @@ $size-large: $size-4 !default
 // 4. Lists and maps
 
 $colors: (white: ($white, $black), black: ($black, $white), light: ($light, $light-invert), dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert)) !default
+$colorshero: (dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), danger: ($danger, $danger-invert)) !default
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 !default
