Updated v5 to allow custom headers

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -128,8 +128,8 @@
       font-weight: $weight-bold
     .nav-logo
       img
-        height: 50px
-        max-height: 50px
+        height: $header-logo
+        max-height: $header-logo
     .nav-search
       position: relative
       width: 100%
