Updated v5 so mobile padding works better

--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -65,3 +65,7 @@ $dimensions: 16 24 32 48 50 64 96 128
     &.is-#{$dimension}x#{$dimension}
       height: $dimension * 1px
       width: $dimension * 1px
+
+.is-50x50
+  .image-overlay
+    background: none
