--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -3,11 +3,12 @@
   border-top: 6px solid $primary
   padding: 0
   a
-    color: inherit
+    color: $grey
     &:hover, &:visited:hover
       color: $white
   .title
     color: $white
   .footer-head,
   .footer-foot
+    color: $grey
     padding: 1.5rem
