--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -261,6 +261,8 @@
               border-color: transparent
               border-radius: 0
               cursor: pointer
+            .count
+              display: none
 
 +mobile
   .hero
