--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1307,61 +1307,61 @@ a.box:active {
 }
 
 .button.is-medium {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .button.is-medium .icon:first-child:not(:last-child) {
-  margin-left: -0.125rem;
-  margin-right: 0.625rem;
+  margin-left: 15.25rem;
+  margin-right: 16px;
 }
 
 .button.is-medium .icon:last-child:not(:first-child) {
-  margin-left: 0.625rem;
-  margin-right: -0.125rem;
+  margin-left: 16px;
+  margin-right: 15.25rem;
 }
 
 .button.is-medium .icon:first-child:last-child {
-  margin-left: calc(-1px + -0.125rem);
-  margin-right: calc(-1px + -0.125rem);
+  margin-left: calc(-1px + 15.25rem);
+  margin-right: calc(-1px + 15.25rem);
 }
 
 .button.is-medium .icon.is-small:first-child:not(:last-child) {
-  margin-left: 0.125rem;
+  margin-left: 15.5rem;
 }
 
 .button.is-medium .icon.is-small:last-child:not(:first-child) {
-  margin-right: 0.125rem;
+  margin-right: 15.5rem;
 }
 
 .button.is-medium .icon.is-small:first-child:last-child {
-  margin-left: calc(-1px + 0.125rem);
-  margin-right: calc(-1px + 0.125rem);
+  margin-left: calc(-1px + 15.5rem);
+  margin-right: calc(-1px + 15.5rem);
 }
 
 .button.is-medium .icon.is-medium:first-child:not(:last-child) {
-  margin-left: -0.375rem;
+  margin-left: 15rem;
 }
 
 .button.is-medium .icon.is-medium:last-child:not(:first-child) {
-  margin-right: -0.375rem;
+  margin-right: 15rem;
 }
 
 .button.is-medium .icon.is-medium:first-child:last-child {
-  margin-left: calc(-1px + -0.375rem);
-  margin-right: calc(-1px + -0.375rem);
+  margin-left: calc(-1px + 15rem);
+  margin-right: calc(-1px + 15rem);
 }
 
 .button.is-medium .icon.is-large:first-child:not(:last-child) {
-  margin-left: -0.875rem;
+  margin-left: 14.5rem;
 }
 
 .button.is-medium .icon.is-large:last-child:not(:first-child) {
-  margin-right: -0.875rem;
+  margin-right: 14.5rem;
 }
 
 .button.is-medium .icon.is-large:first-child:last-child {
-  margin-left: calc(-1px + -0.875rem);
-  margin-right: calc(-1px + -0.875rem);
+  margin-left: calc(-1px + 14.5rem);
+  margin-right: calc(-1px + 14.5rem);
 }
 
 .button.is-large {
@@ -1600,7 +1600,7 @@ a.box:active {
 }
 
 .content.is-medium {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .content.is-large {
@@ -1751,7 +1751,7 @@ a.box:active {
 
 .input.is-medium,
 .textarea.is-medium {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .input.is-large,
@@ -1926,7 +1926,7 @@ a.box:active {
 }
 
 .select.is-medium {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .select.is-large {
@@ -2117,7 +2117,7 @@ a.box:active {
 }
 
 .control.has-icon .input.is-medium + .icon {
-  top: 1.5625rem;
+  top: 40px;
 }
 
 .control.has-icon .input.is-large + .icon {
@@ -2138,7 +2138,7 @@ a.box:active {
 }
 
 .control.has-icon:not(.has-icon-right) .input.is-medium + .icon {
-  left: 1.5625rem;
+  left: 40px;
 }
 
 .control.has-icon:not(.has-icon-right) .input.is-large + .icon {
@@ -2159,7 +2159,7 @@ a.box:active {
 }
 
 .control.has-icon.has-icon-right .input.is-medium + .icon {
-  right: 1.5625rem;
+  right: 40px;
 }
 
 .control.has-icon.has-icon-right .input.is-large + .icon {
@@ -2525,7 +2525,7 @@ a.box:active {
 }
 
 .progress.is-medium {
-  height: 1.25rem;
+  height: 32px;
 }
 
 .progress.is-large {
@@ -2673,7 +2673,7 @@ a.box:active {
 }
 
 .tag.is-large {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .title,
@@ -2867,8 +2867,8 @@ a.box:active {
 }
 
 .delete.is-medium {
-  height: 26px;
-  width: 26px;
+  height: 672px;
+  width: 672px;
 }
 
 .delete.is-large {
@@ -2924,7 +2924,7 @@ a.box:active {
   background-color: whitesmoke;
   border-radius: 290486px;
   display: inline-flex;
-  font-size: 1.25rem;
+  font-size: 32px;
   height: 2em;
   justify-content: center;
   margin-right: 1.5rem;
@@ -3498,8 +3498,8 @@ a.box:active {
 }
 
 .modal-close.is-medium {
-  height: 26px;
-  width: 26px;
+  height: 672px;
+  width: 672px;
 }
 
 .modal-close.is-large {
@@ -4251,7 +4251,7 @@ label.panel-block:hover {
 }
 
 .tabs.is-medium {
-  font-size: 1.25rem;
+  font-size: 32px;
 }
 
 .tabs.is-large {
