--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -112,7 +112,7 @@
         padding-left: 0;
       }
 
-      .title.is-2 .icon.is-large {
+      .title.is-2 .icon.is-medium {
         display: none;
       }
     }
