--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -123,7 +123,7 @@ $family-code: $family-monospace !default
 
 $size-small: $size-7 !default
 $size-normal: 1rem !default
-$size-medium: 32px !default
+$size-medium: $size-5 !default
 $size-large: $size-4 !default
 
 ////////////////////////////////////////////////
