Nested Column margin issue

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -211,6 +211,8 @@
     margin-bottom: -0.75rem
   &:not(:last-child)
     margin-bottom: 0.75rem
+  .column
+    margin-bottom: -0.75rem
   // Modifiers
   &.is-centered
     justify-content: center
