Nested Columns margin issue

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -4,6 +4,8 @@
   flex-grow: 1
   flex-shrink: 1
   padding: 0.75rem
+  .columns
+    margin-bottom: -0.75rem
   .columns.is-mobile > &.is-narrow
     flex: none
   .columns.is-mobile > &.is-full
@@ -211,8 +213,6 @@
     margin-bottom: -0.75rem
   &:not(:last-child)
     margin-bottom: 0.75rem
-  .column
-    margin-bottom: -0.75rem
   // Modifiers
   &.is-centered
     justify-content: center
